// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom CRUD resolvers createUnitResolver tests: PUT CALL 1`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "address": Object {
          "address": "Ág u. 1.",
          "city": "Budapest",
          "country": "Magyarország",
          "location": Object {
            "lat": 47,
            "lng": 19,
          },
          "postalCode": "1021",
          "title": "HQ",
        },
        "chainId": "CHAINID",
        "description": Object {
          "en": "Test unit #test_unit_1_id description",
          "hu": "Teszt unit #test_unit_1_id leírás",
        },
        "groupId": "GROUPID",
        "id": "THE_UUID",
        "isAcceptingOrders": true,
        "isActive": true,
        "lanes": Array [
          Object {
            "color": "#e72222",
            "id": "lane_01",
            "name": "bár",
          },
          Object {
            "color": "#e123ef",
            "id": "lane_02",
            "name": "konyha",
          },
        ],
        "name": "Késdobáló S",
        "open": Object {
          "from": "1970-01-01",
        },
        "paymentModes": Array [
          Object {
            "method": "cash",
            "type": "cash",
          },
          Object {
            "method": "card",
            "type": "card",
          },
          Object {
            "method": "inapp",
            "type": "stripe",
          },
        ],
      },
      "TableName": "Unit-ttk4poqlpjbudlhzfpvbz2ff7q-staging",
    },
  ],
]
`;

exports[`Test custom CRUD resolvers createUnitResolver tests: PUT CALL 2`] = `
Array [
  Array [
    Object {
      "Item": Object {
        "address": Object {
          "address": "Ág u. 1.",
          "city": "Budapest",
          "country": "Magyarország",
          "location": Object {
            "lat": 47,
            "lng": 19,
          },
          "postalCode": "1021",
          "title": "HQ",
        },
        "chainId": "CHAINID",
        "description": Object {
          "en": "Test unit #test_unit_1_id description",
          "hu": "Teszt unit #test_unit_1_id leírás",
        },
        "groupId": "GROUPID",
        "id": "THE_UUID",
        "isAcceptingOrders": true,
        "isActive": true,
        "lanes": Array [
          Object {
            "color": "#e72222",
            "id": "lane_01",
            "name": "bár",
          },
          Object {
            "color": "#e123ef",
            "id": "lane_02",
            "name": "konyha",
          },
        ],
        "name": "Késdobáló S",
        "open": Object {
          "from": "1970-01-01",
        },
        "paymentModes": Array [
          Object {
            "method": "cash",
            "type": "cash",
          },
          Object {
            "method": "card",
            "type": "card",
          },
          Object {
            "method": "inapp",
            "type": "stripe",
          },
        ],
        "pos": Object {
          "rkeeper": Object {
            "anyuppPassword": "HASHED PASSWORD2",
            "anyuppUsername": "ANYUPPUSERNAME",
            "endpointUri": "ENDPOINT",
            "restaurantId": "RESTAURANTID",
            "rkeeperPassword": "HASHED PASSWORD",
            "rkeeperUsername": "USERNAME",
          },
          "type": "rkeeper",
        },
      },
      "TableName": "Unit-ttk4poqlpjbudlhzfpvbz2ff7q-staging",
    },
  ],
]
`;
